force-app/zurich-base/main/default/objects/CustomerWarning__c/CustomerWarning__c.object-meta.xml
<CustomObject>
    <label>Customer Warning</label>
    <nameField>
        <label>Customer Warning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Warnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>