force-app/zurich-base/main/default/objects/CustomerWarning__c/fields/WarningNumber__c.field-meta.xml
<CustomField>
    <fullName>WarningNumber__c</fullName>
    <displayFormat>A-{YY}-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Warning Number</label>
    <type>AutoNumber</type>
</CustomField>